<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    appsettings

    <header
        android:fragment="aivco.com.studyhelper.SettingsActivity$About"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about"

        />




    <header
        android:fragment="aivco.com.studyhelper.SettingsActivity$Profile"
        android:icon="@drawable/ic_account_black"
        android:title="@string/profile"

        />

    <header
        android:fragment="aivco.com.studyhelper.SettingsActivity$AppSettings"
        android:icon="@android:drawable/presence_video_away"
        android:title="@string/app_settings" />






    <header
        android:fragment="aivco.com.studyhelper.SettingsActivity$LogoutPreferenceFragment"
        android:icon="@drawable/logout"
        android:title="@string/pref_logout" />


    <header
        android:fragment="aivco.com.studyhelper.SettingsActivity$ChangePassword"
        android:icon="@drawable/edit"
        android:title="@string/change_password" />

    <header
        android:fragment="aivco.com.studyhelper.SettingsActivity$ChangeUsername"
        android:icon="@drawable/edit"
        android:title="@string/change_username" />


    <header
        android:fragment="aivco.com.studyhelper.SettingsActivity$Comment"
        android:icon="@drawable/comment"
        android:title="@string/suggestion" />







</preference-headers>
