<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aivco.com.studyhelper.LoginActivity">




        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <android.support.design.widget.TextInputLayout
                    style="@style/formcontent.login"
                    android:id="@+id/oldpasswordTextInputLayout"

                    >

                    <AutoCompleteTextView
                        android:id="@+id/oldpassword"
                        android:visibility="gone"
                        style="@style/formcontent.login"
                        android:hint="@string/old_password"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    style="@style/formcontent.login"
                    android:id="@+id/newpasswordTextInputLayout"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/newpassword"
                        android:visibility="gone"
                        style="@style/formcontent.login"
                        android:hint="@string/new_password"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/formcontent.login"
                    android:id="@+id/repeatpasswordTextInputLayout"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/repeatpassword"
                        android:visibility="gone"
                        style="@style/formcontent.login"
                        android:hint="@string/repeat_password"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    style="@style/formcontent.login"
                    android:id="@+id/emailTextInputLayout"

                    >

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        style="@style/formcontent.login"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/formcontent.login"
                    android:id="@+id/passwordTextInputLayout"
                    >

                    <EditText
                        android:id="@+id/password"
                        style="@style/formcontent.login"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <TextView

                    style="@style/formcontent.login"
                    android:visibility="gone"
                    android:id="@+id/result"
                    />






                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/formcontent.buttons"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/register"
                    style="@style/formcontent.buttons"
                    android:text="@string/action_register"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/change_password"
                    android:visibility="gone"
                    style="@style/formcontent.buttons"
                    android:text="@string/reset_password"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/returntologin"
                    style="@style/formcontent.buttons"
                    android:visibility="gone"
                    android:text="@string/return_login_register"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/access_to_change_password"
                    android:visibility="gone"
                    style="@style/formcontent.buttons"
                    android:text="@string/access_to_reset_password"
                    android:textStyle="bold" />



            </LinearLayout>
        </ScrollView>

    </LinearLayout>

