<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        >

        <android.support.design.widget.TextInputLayout
            style="@style/formcontent.login"
            android:id="@+id/password"


            >

            <AutoCompleteTextView
                android:id="@+id/current_password"
                style="@style/formcontent.login"
                android:hint="@string/prompt_password"
                android:textColor="#fff"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            style="@style/formcontent.login"
            android:id="@+id/newpassword11"

            >

            <AutoCompleteTextView
                android:id="@+id/newpassword1"
                style="@style/formcontent.login"
                android:hint="@string/new_password"
                android:textColor="#fff"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
        style="@style/formcontent.login"
        android:id="@+id/newpassword12"

        >

        <AutoCompleteTextView
            android:id="@+id/newpassword2"
            style="@style/formcontent.login"
            android:hint="@string/repeat_password"
            android:textColor="#fff"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

  <TextView
        style="@style/formcontent.login"
        android:visibility="gone"
      android:id="@+id/result"

        />
    <Button
        style="@style/formcontent.buttons"
        android:text="Change Password"
        android:id="@+id/chagepass"
       />

    </LinearLayout>

</ScrollView>

